Fix header spacing when tag is showing
Fixes #67

--- a/src/_includes/assets/css/components.header.css
+++ b/src/_includes/assets/css/components.header.css
@@ -44,6 +44,10 @@
   justify-content: space-between;
 }
 
+.header--site .nav__list {
+  flex-wrap: wrap;
+}
+
 .nav__link {
   border: none;
   color: var(--color-grey-dark);
@@ -67,6 +71,14 @@
   line-height: inherit;
 }
 
+.writing--tag .header--site .nav__item--writing {
+  padding-right: var(--gutter);
+}
+
+.writing--tag .header--desktop .nav__item--writing {
+  max-width: 34rem;
+}
+
 .writing--tag .nav__link--current {
   color: var(--color-grey-dark);
   padding-right: 0;
@@ -77,10 +89,15 @@
   color: var(--color-1);
 }
 
-.writing--tag .panel {
+.writing--tag .panel,
+.writing--tag .nav__item {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.writing--tag .nav__item {
+  max-width: 100vw;
 }
 
 .skip-buttons:focus-within {
